# Udacity_AutonomousDriving

./: .gitignore  README.md  drive.py  network_model.py  pyproject.toml  requirements.txt  run.py  self_driving.ipynb  train.py  utils.py
models/: model_0  model_10000  model_100000  model_105000  model_110000  model_115000  model_120000  model_125000  model_130000  model_135000  model_140000  model_145000  model_15000  model_150000  model_155000  model_160000  model_165000  model_170000  model_175000  model_180000  model_185000  model_190000  model_195000  model_20000  model_200000  model_205000  model_210000  model_215000  model_220000  model_225000  model_230000  model_235000  model_240000  model_245000  model_25000  model_250000  model_255000  model_260000  model_265000  model_270000  (+41 more)
models/nvidia/: full_nvidia_e4_epoch10.pth  full_nvidia_e4_epoch15.pth  nvidia_epoch20.pt  nvidia_epoch25.pt  nvidia_epoch30.pt
