[tool.poetry]
name = "udacity-autonomousdriving"
version = "0.1.0"
description = ""
authors = ["Aristotelis1 <aristotelis.tsoutsanis@gmail.com>"]
readme = "README.md"
packages = [{include = "udacity_autonomousdriving"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
opencv-python = "^4.8.0.74"
Flask-SocketIO = "^4.3.1"
python-engineio = "^3.13.2"
python-socketio = "^4.6.0"
torch = "^2.0.1"
torchsummary = "^1.5.1"
tensorboard-logger = "^0.1.0"
eventlet = "^0.33.3"
h5py = "^3.9.0"
scipy = "^1.11.1"
cryptography = "^41.0.2"
torchvision = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
